--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.h2database:h2:1.4.199'
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' //소셜 로그인 등 클라이언트 입장에서 소셜 기능 구현 시 필요한 의존성
+
 }
 
 tasks.named('test') {
